--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
   <title>Mesa Completa Coffee Break</title>
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+
+  <!-- SEO BÁSICO -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mesa Completa Coffee Break - Coffee Break para Eventos</title>
+
+  <meta name="description" content="Buffet especializado em Coffee Break para eventos, empresas e celebrações. Sabores artesanais, apresentação impecável e atendimento personalizado.">
+  <meta name="keywords" content="coffee break, buffet, mesa completa, coffee break empresarial, coffee break para eventos, coffee break para empresas, coffee break gourmet">
+  <meta name="author" content="Ryan Morello - Ciber Guardians Services">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph (para redes sociais) -->
+  <meta property="og:title" content="Mesa Completa Coffee Break">
+  <meta property="og:description" content="Buffet especializado em Coffee Break para eventos e empresas. Transforme seus momentos com sabor e elegância.">
+  <meta property="og:image" content="https://mesacompleta.com.br/img/banner.jpg">
+  <meta property="og:url" content="https://mesacompleta.com.br">
+  <meta property="og:type" content="website">
+
+  <!-- Ícone -->
+  <link rel="icon" type="image/png" href="img/favicon.png">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://mesacompleta.com.br/">
+
+
 </head>
 <body>
 
@@ -50,6 +75,24 @@
     <p>© 2025 Mesa Completa Coffee Break — Todos os direitos reservados</p>
     <p>Feito com <span class="heart">❤</span> por <a href="#" class="author">Ryan Morello</a></p>
   </footer>
+
+  <!-- Google Analytics (para monitorar acessos) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXX'); /* Substitua pelo seu ID */
+  </script>
+
+  <!-- Otimização de carregamento -->
+  <script>
+    // Adiciona lazy-loading em todas as imagens automaticamente
+    document.addEventListener("DOMContentLoaded", () => {
+      document.querySelectorAll("img").forEach(img => img.loading = "lazy");
+    });
+  </script>
+
 
 </body>
 </html>
