--- a/index.html
+++ b/index.html
@@ -49,26 +49,68 @@
   <!-- Cards -->
   <section class="cards">
     <div class="card">
-      <img src="img/coffee1.jpg" alt="Mini Coffee Tradicional">
-      <h2>Mini Coffee Tradicional</h2>
+      <img src="img/coffee.png"alt="Mini Coffee Tradicional">
+      <h2>Especiais</h2>
       <p>Opção ideal para pequenas reuniões e encontros corporativos.</p>
-      <a href="#" class="btn">Solicitar Orçamento</a>
+      <a href="html/Especiais.html" class="btn">acesse nosso cardapio completo</a>
     </div>
 
     <div class="card">
-      <img src="img/coffee2.jpg" alt="Coffee Completo">
-      <h2>Coffee Completo</h2>
+      <img src="img/coffee.png" alt="Coffee Completo">
+      <h2>Tradicional</h2>
       <p>Cardápio variado e completo para eventos de médio porte.</p>
-      <a href="https://wa.me/5599999999999" class="btn whatsapp">Falar no WhatsApp</a>
+      <a href="html/Tradicional.html" class="btn">acesse nosso cardapio completo</a>
+    </div>
+
+  <div class="card">
+      <img src="img/coffee.png" alt="Coffee Premium">
+      <h2>Premium</h2>
+      <p>Seleção especial de produtos premium e apresentação refinada.</p>
+      <a href="html/Premium.html" class="btn">acesse nosso cardapio completo</a>
     </div>
 
     <div class="card">
-      <img src="img/coffee3.jpg" alt="Coffee Gourmet">
-      <h2>Coffee Gourmet</h2>
+      <img src="img/coffee.png" alt="Coffee Gourmet">
+      <h2>Basico</h2>
       <p>Seleção especial de produtos premium e apresentação refinada.</p>
-      <a href="#" class="btn">Solicitar Orçamento</a>
+      <a href="html/Basico.html" class="btn">acesse nosso cardapio completo</a>
     </div>
+
   </section>
+
+    <section class="cards">
+
+
+    <div class="card">
+      <img src="img/cake.png" alt="Mini Coffee Tradicional">
+      <h2>Festa Completa</h2>
+      <p>Opção ideal para pequenas reuniões e encontros corporativos.</p>
+      <a href="html/Festa-Completa.html" class="btn">acesse nosso cardapio completo</a>
+    </div>
+
+    <div class="card">
+      <img src="img/cake.png" alt="Coffee Completo">
+      <h2>Só Um Bolinho</h2>
+      <p>Cardápio variado e completo para eventos de médio porte.</p>
+      <a href="html/Só-Um-Bolinho.html" class="btn">acesse nosso cardapio completo</a>
+    </div>
+
+    <div class="card">
+      <img src="img/sexta.png" alt="Coffee Gourmet">
+      <h2>PicNic I</h2>
+      <p>Seleção especial de produtos premium e apresentação refinada.</p>
+      <a href="html/PicNic-I.html" class="btn">acesse nosso cardapio completo</a>
+    </div>
+
+        <div class="card">
+      <img src="img/sexta.png" alt="Mini Coffee Tradicional">
+      <h2>PicNic II</h2>
+      <p>Opção ideal para pequenas reuniões e encontros corporativos.</p>
+      <a href="html/PicNic-II.html" class="btn">acesse nosso cardapio completo</a>
+    </div>
+
+  </section>
+
 
   <!-- Footer -->
   <footer class="footer">
