--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <!-- Footer -->
   <footer class="footer">
     <p>© 2025 Mesa Completa Coffee Break — Todos os direitos reservados</p>
-    <p>Feito com <span class="heart">❤</span> por <a href="#" class="author">Ryan Morello</a></p>
+    <p>Feito por <a href="#" class="author">Ryan Morello</a></p>
   </footer>
 
   <!-- Google Analytics (para monitorar acessos) -->
