atualização de pagina

--- a/html/Só-Um-Bolinho.html
+++ b/html/Só-Um-Bolinho.html
@@ -2,18 +2,29 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <title>Pacotes Coffee Break</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Especiais - Mesa Completa Coffee Break</title>
-  <link rel="stylesheet" href="/mesa-completa/css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  <main class="detalhe">
-    <img src="img/coffee.png" alt="Especiais">
-    <h1>Coffee Break Especiais</h1>
-    <p>Opção ideal para pequenas reuniões e encontros corporativos. Inclui mini sanduíches, sucos naturais, pães artesanais, bolos e frutas frescas.</p>
-    <a href="https://wa.me/5527999999999?text=Olá!%20Quero%20um%20orçamento%20para%20o%20Coffee%20Especiais." class="btn">Solicitar Orçamento</a>
-    <br><br>
-    <a href="index.html" class="btn">Voltar ao Cardápio</a>
-  </main>
+
+<header class="header">
+    <img src="/img/logo.png" alt="Logo Mesa Completa Coffee Break" class="logo" />
+    <h1 class="title">MESA COMPLETA</h1>
+    <p class="subtitle">Coffee break</p>
+  </header>
+
+  <a href="index.html" class="btn">Voltar ao Cardápio</a>
+
+<main class="cards" id="cards-container"></main>
+
+<footer class="footer">
+  <p>📦 Descartáveis inclusos</p>
+  <p>🚚 Entregamos no local — Consultar região</p>
+  <p>📞 Informações e reservas: (27) 99579-0841</p>
+</footer>
+
+
+<script src="/js/so-um-bolinho.js"></script>
 </body>
 </html>
