--- a/index.html
+++ b/index.html
@@ -47,13 +47,22 @@
   <section class="carousel">
     <div class="carousel-container">
       <div class="slide fade">
-        <img src="img/coffee.png" alt="Coffee Break decorado" loading="lazy">
+        <img src="img/basico/10.jpeg" alt="Coffee Break decorado" loading="lazy">
       </div>
       <div class="slide fade">
-        <img src="img/cake.png" alt="Mesa de doces e salgados" loading="lazy">
+        <img src="img/junino/WhatsApp Image 2025-12-20 at 11.55.19 (4).jpeg" alt="Mesa de doces e salgados" loading="lazy">
       </div>
       <div class="slide fade">
-        <img src="img/sexta.png" alt="Buffet Mesa Completa" loading="lazy">
+        <img src="img/premium/WhatsApp Image 2025-12-20 at 11.55.13 (2).jpeg" alt="Buffet Mesa Completa" loading="lazy">
+      </div>
+      <div class="slide fade">
+        <img src="img/basico/20.jpeg" alt="Coffee Break premium" loading="lazy">
+      </div>
+      <div class="slide fade">
+        <img src="img/junino/WhatsApp Image 2025-12-20 at 11.55.19 (3).jpeg" alt="Mesa de doces e festa" loading="lazy">
+      </div>
+      <div class="slide fade">
+        <img src="img/premium/WhatsApp Image 2025-12-20 at 11.55.13 (1).jpeg" alt="Buffet bascio" loading="lazy">
       </div>
     </div>
 
@@ -66,6 +75,9 @@
       <span class="dot" onclick="currentSlide(1)"></span>
       <span class="dot" onclick="currentSlide(2)"></span>
       <span class="dot" onclick="currentSlide(3)"></span>
+      <span class="dot" onclick="currentSlide(4)"></span>
+      <span class="dot" onclick="currentSlide(5)"></span>
+      <span class="dot" onclick="currentSlide(6)"></span>
     </div>
   </section>
 
@@ -78,28 +90,28 @@
   <!-- Cards -->
   <section class="cards">
     <div class="card">
-      <img src="img/coffee.png"alt="Mini Coffee Tradicional">
+      <img src="img/premium/10.jpeg">
       <h2>Especiais</h2>
       <p>Opção ideal para pequenas reuniões e encontros corporativos.</p>
       <a href="html/Especiais.html" class="btn">acesse nosso cardapio completo</a>
     </div>
 
     <div class="card">
-      <img src="img/coffee.png" alt="Coffee Completo">
+      <img src="img/basico/20.jpeg" alt="Coffee Completo">
       <h2>Tradicional</h2>
       <p>Cardápio variado e completo para eventos de médio porte.</p>
       <a href="html/Tradicional.html" class="btn">acesse nosso cardapio completo</a>
     </div>
 
   <div class="card">
-      <img src="img/coffee.png" alt="Coffee Premium">
+      <img src="img/premium/15.jpeg" alt="Coffee Premium">
       <h2>Premium</h2>
       <p>Seleção especial de produtos premium e apresentação refinada.</p>
       <a href="html/Premium.html" class="btn">acesse nosso cardapio completo</a>
     </div>
 
     <div class="card">
-      <img src="img/coffee.png" alt="Coffee Gourmet">
+      <img src="img/basico/10.jpeg" alt="Coffee Gourmet">
       <h2>Basico</h2>
       <p>Seleção especial de produtos premium e apresentação refinada.</p>
       <a href="html/Basico.html" class="btn">acesse nosso cardapio completo</a>
@@ -111,28 +123,28 @@
 
 
     <div class="card">
-      <img src="img/cake.png" alt="Mini Coffee Tradicional">
+      <img src="img/festa completa/WhatsApp Image 2025-12-20 at 11.55.14.jpeg" alt="Mini Coffee Tradicional">
       <h2>Festa Completa</h2>
       <p>Opção ideal para pequenas reuniões e encontros corporativos.</p>
       <a href="html/Festa-Completa.html" class="btn">acesse nosso cardapio completo</a>
     </div>
 
     <div class="card">
-      <img src="img/cake.png" alt="Coffee Completo">
+      <img src="img/tradicional/WhatsApp Image 2025-12-20 at 11.55.12 (1).jpeg" alt="Coffee Completo">
       <h2>Só Um Bolinho</h2>
       <p>Cardápio variado e completo para eventos de médio porte.</p>
       <a href="html/Só-Um-Bolinho.html" class="btn">acesse nosso cardapio completo</a>
     </div>
 
     <div class="card">
-      <img src="img/sexta.png" alt="Coffee Gourmet">
+      <img src="img/pic nic/WhatsApp Image 2025-12-20 at 11.55.161.jpeg" alt="Coffee Gourmet">
       <h2>PicNic I</h2>
       <p>Seleção especial de produtos premium e apresentação refinada.</p>
       <a href="html/PicNic-I.html" class="btn">acesse nosso cardapio completo</a>
     </div>
 
         <div class="card">
-      <img src="img/sexta.png" alt="Mini Coffee Tradicional">
+      <img src="img/pic nic/WhatsApp Image 2025-12-20 at 11.55.17 (1).jpeg" alt="Mini Coffee Tradicional">
       <h2>PicNic II</h2>
       <p>Opção ideal para pequenas reuniões e encontros corporativos.</p>
       <a href="html/PicNic-II.html" class="btn">acesse nosso cardapio completo</a>
@@ -144,7 +156,6 @@
   <!-- Footer -->
   <footer class="footer">
     <p>© 2025 Mesa Completa Coffee Break — Todos os direitos reservados</p>
-    <p>Feito por <a href="#" class="author">Ryan Morello</a></p>
   </footer>
 
   <!-- Google Analytics (para monitorar acessos) -->
