--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
         <img src="img/basico/10.jpeg" alt="Coffee Break decorado" loading="lazy">
       </div>
       <div class="slide fade">
-        <img src="img/junino/WhatsApp Image 2025-12-20 at 11.55.19 (4).jpeg" alt="Mesa de doces e salgados" loading="lazy">
+        <img src="img/festa-completa/10.jpeg" alt="Mesa de doces e salgados" loading="lazy">
       </div>
       <div class="slide fade">
-        <img src="img/premium/WhatsApp Image 2025-12-20 at 11.55.13 (2).jpeg" alt="Buffet Mesa Completa" loading="lazy">
+        <img src="img/premium/15.jpeg" alt="Buffet Mesa Completa" loading="lazy">
       </div>
       <div class="slide fade">
         <img src="img/basico/20.jpeg" alt="Coffee Break premium" loading="lazy">
       </div>
       <div class="slide fade">
-        <img src="img/junino/WhatsApp Image 2025-12-20 at 11.55.19 (3).jpeg" alt="Mesa de doces e festa" loading="lazy">
+        <img src="img/pic nic/20.jpeg" alt="Mesa de doces e festa" loading="lazy">
       </div>
       <div class="slide fade">
-        <img src="img/premium/WhatsApp Image 2025-12-20 at 11.55.13 (1).jpeg" alt="Buffet bascio" loading="lazy">
+        <img src="img/premium/20.jpeg" alt="Buffet bascio" loading="lazy">
       </div>
     </div>
 
@@ -123,28 +123,28 @@
 
 
     <div class="card">
-      <img src="img/festa completa/WhatsApp Image 2025-12-20 at 11.55.14.jpeg" alt="Mini Coffee Tradicional">
+      <img src="/img/festa-completa/30.jpeg" alt="Mini Coffee Tradicional">
       <h2>Festa Completa</h2>
       <p>Opção ideal para pequenas reuniões e encontros corporativos.</p>
       <a href="html/Festa-Completa.html" class="btn">acesse nosso cardapio completo</a>
     </div>
 
     <div class="card">
-      <img src="img/tradicional/WhatsApp Image 2025-12-20 at 11.55.12 (1).jpeg" alt="Coffee Completo">
+      <img src="img/tradicional/WhatsApp Image 2025-12-20 at 11.55.12.jpeg" alt="Coffee Completo">
       <h2>Só Um Bolinho</h2>
       <p>Cardápio variado e completo para eventos de médio porte.</p>
       <a href="html/Só-Um-Bolinho.html" class="btn">acesse nosso cardapio completo</a>
     </div>
 
     <div class="card">
-      <img src="img/pic nic/WhatsApp Image 2025-12-20 at 11.55.161.jpeg" alt="Coffee Gourmet">
+      <img src="img/pic nic/25.jpeg" alt="Coffee Gourmet">
       <h2>PicNic I</h2>
       <p>Seleção especial de produtos premium e apresentação refinada.</p>
       <a href="html/PicNic-I.html" class="btn">acesse nosso cardapio completo</a>
     </div>
 
         <div class="card">
-      <img src="img/pic nic/WhatsApp Image 2025-12-20 at 11.55.17 (1).jpeg" alt="Mini Coffee Tradicional">
+      <img src="img/pic nic/15.jpeg" alt="Mini Coffee Tradicional">
       <h2>PicNic II</h2>
       <p>Opção ideal para pequenas reuniões e encontros corporativos.</p>
       <a href="html/PicNic-II.html" class="btn">acesse nosso cardapio completo</a>
