atualização html cardapio

--- a/html/Especiais.html
+++ b/html/Especiais.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Especiais - Mesa Completa Coffee Break</title>
-<<<<<<< HEAD
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -28,4 +27,6 @@
 
     <a href="/index.html" class="btn">Voltar ao Cardápio</a>
     <script src="/js/especiais.js"></script>
-=======
+  </main>
+</body>
+</html>
