--- a/html/Tradicional.html
+++ b/html/Tradicional.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Pacotes Coffee Break</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -27,3 +26,5 @@
 
 
 <script src="/js/tradicional.js"></script>
+</body>
+</html>
