--- a/html/Basico.html
+++ b/html/Basico.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <title>Pacotes Coffee Break</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
 <header class="header">
-    <img src="/img/logo.png" alt="Logo Mesa Completa Coffee Break" class="logo" />
+    <img src="../img/logo.png" alt="Logo Mesa Completa Coffee Break" class="logo" />
     <h1 class="title">MESA COMPLETA</h1>
     <p class="subtitle">Coffee break</p>
   </header>
@@ -25,6 +25,6 @@
 </footer>
 
 
-<script src="/js/basico.js"></script>
+<script src="../js/basico.js"></script>
 </body>
 </html>
