--- a/html/Especiais.html
+++ b/html/Especiais.html
@@ -3,30 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Especiais - Mesa Completa Coffee Break</title>
-    <link rel="stylesheet" href="/css/style.css">
+  <title>Especiais – Mesa Completa Coffee Break</title>
+
+  <!-- CSS CORRETO -->
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
- <header class="header">
-    <img src="/img/logo.png" alt="Logo Mesa Completa Coffee Break" class="logo" />
+
+  <header class="header">
+    <img src="../img/logo.png" alt="Logo Mesa Completa Coffee Break" class="logo">
     <h1 class="title">MESA COMPLETA</h1>
     <p class="subtitle">Coffee break</p>
   </header>
 
-  <a href="index.html" class="btn">Voltar ao Cardápio</a>
+  <a href="../index.html" class="btn">Voltar ao Cardápio</a>
 
-<main class="cards" id="cards-container"></main>
+  <main class="cards" id="cards-container"></main>
 
-<footer class="footer">
-  <p>📦 Descartáveis inclusos</p>
-  <p>🚚 Entregamos no local — Consultar região</p>
-  <p>📞 Informações e reservas: (27) 99579-0841</p>
-</footer>
+  <footer class="footer">
+    <p>📦 Descartáveis inclusos</p>
+    <p>🚚 Entregamos no local — Consultar região</p>
+    <p>📞 Informações e reservas: (27) 99579-0841</p>
+  </footer>
 
-  </main>
-
-    <a href="/index.html" class="btn">Voltar ao Cardápio</a>
-    <script src="/js/especiais.js"></script>
-  </main>
+  <!-- JS CORRETO -->
+  <script src="../js/especiais.js"></script>
 </body>
 </html>
