--- a/html/Tradicional.html
+++ b/html/Tradicional.html
@@ -2,29 +2,29 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Pacotes Coffee Break</title>
+  <title>Tradicional – Mesa Completa Coffee Break</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
+
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
-<header class="header">
-    <img src="/img/logo.png" alt="Logo Mesa Completa Coffee Break" class="logo" />
+  <header class="header">
+    <img src="../img/logo.png" alt="Logo Mesa Completa Coffee Break" class="logo">
     <h1 class="title">MESA COMPLETA</h1>
     <p class="subtitle">Coffee break</p>
   </header>
 
-  <a href="index.html" class="btn">Voltar ao Cardápio</a>
+  <a href="../index.html" class="btn">Voltar ao Cardápio</a>
 
-<main class="cards" id="cards-container"></main>
+  <main class="cards" id="cards-container"></main>
 
-<footer class="footer">
-  <p>📦 Descartáveis inclusos</p>
-  <p>🚚 Entregamos no local — Consultar região</p>
-  <p>📞 Informações e reservas: (27) 99579-0841</p>
-</footer>
+  <footer class="footer">
+    <p>📦 Descartáveis inclusos</p>
+    <p>🚚 Entregamos no local — Consultar região</p>
+    <p>📞 Informações e reservas: (27) 99579-0841</p>
+  </footer>
 
-
-<script src="/js/tradicional.js"></script>
+  <script src="../js/tradicional.js"></script>
 </body>
 </html>
