Fix image source path in index.html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 
     <div class="card">
-      <img src="/img/festa-completa/30.jpeg" alt="Mini Coffee Tradicional">
+      <img src="img/festa-completa/30.jpeg" alt="Mini Coffee Tradicional">
       <h2>Festa Completa</h2>
       <p>Opção ideal para pequenas reuniões e encontros corporativos.</p>
       <a href="html/Festa-Completa.html" class="btn">acesse nosso cardapio completo</a>
